# hsk-worksheet-generator

./: .gitignore  README.md  main.sh  pyproject.toml  release.sh  scrapy.cfg
.github/workflows/: build.yaml  release.yaml
hsk_worksheet_generator/: exporters.py  items.py  loaders.py  settings.py
hsk_worksheet_generator/spiders/: allsetlearning.py
input/mochi/: finish_exporting.json  start_exporting.json
input/typst/: template.typ
scraper/: exporters.py  settings.py
scraper/scraper/spiders/: allsetlearning.py
template/: main.typ
