[tool.poetry]
name = "hsk-worksheet-generator"
version = "0.0.2"
description = ""
authors = ["João Victor Teófilo Salgado <jvictorteo2000@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
