[tool.poetry]
name = "hsk-worksheet-generator"
version = "v0.0.4"
description = "A simple set of tools to generate HSK worksheets as CSVs and PDFs files."
authors = ["João Victor Teófilo Salgado <jvictorteo2000@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
