[project]
name = "hsk-worksheet-generator"
version = "v0.0.5"
description = "A simple set of tools to generate HSK worksheets as CSVs and PDFs files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
